--- a/app/static/css/sidebar.css
+++ b/app/static/css/sidebar.css
@@ -3,7 +3,6 @@
     color: #e8f5e7;
     display: flex;
     flex-direction: column;
-    padding: 8px;
 }
 
 .sidebar-accounts {
